--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<h1>Marico quien lo lea</h1>
+		<h1>Marico quien lo lea 1</h1>
 		<p> Esta es una guía para facilitar el conocimiento acerca del lenguaje de JavaScript y cómo podemos utilizar JSON y mapearlo de forma nativa con la instrucción JSON.parse, finalmente se detallará el uso del inspector y todas sus funcionalidades.</p>
 		<br>
 
